--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -1,12 +1,15 @@
-{% extends 'base.html' %} {% block title %}
-<div class="h1">Create account</div>
+{% extends 'base.html' %} {% load widget_tweaks %} {% block title %}
+<div class="h1">アカウント新規作成</div>
 {% endblock %} {% block content %}
 <div>
-  <br />
   <form method="POST">
     {% csrf_token %} {{ form.non_field_errors }} {% for field in form %}
-    {{field.label_tag }} {{ field }} {{ field.errors }}
-    <br />
+    <div class="form-group">
+      <label class="col-form-label mt-4" for="{{field.id_for_label}}"
+        >{{field.label}}</label
+      >
+      {{field | add_class:"form-control"}} {{ field.errors }}
+    </div>
     {% endfor %}
     <div class="mt-3">
       <button type="submit" class="btn btn-primary">Create</button>
