--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,14 +1,20 @@
-{% extends 'base.html' %} {% block title %}
-<div class="h1">Login</div>
+{% extends 'base.html' %} {% load widget_tweaks %} {% block title %}
+<div class="h1">ログイン</div>
 {% endblock %} {% block content %}
-<form method="post">
-  {% csrf_token %} {{ form.non_field_errors }} {% for field in form %} {{
-  field.label_tag }} {{ field }} {{ field.errors }}
-  <br />
-  {% endfor %}
-  <div class="mt-3">
-    <button type="submit" class="btn btn-primary">Login</button>
-    <a href="{% url 'accounts:index' %}" class="btn btn-secondary">Back</a>
-  </div>
-</form>
+<div>
+  <form method="post">
+    {% csrf_token %} {{ form.non_field_errors }} {% for field in form %}
+    <div class="form-group">
+      <label class="col-form-label mt-4" for="{{field.id_for_label}}"
+        >{{field.label}}</label
+      >
+      {{field | add_class:"form-control"}} {{ field.errors }}
+    </div>
+    {% endfor %}
+    <div class="mt-3">
+      <button type="submit" class="btn btn-primary">Login</button>
+      <a href="{% url 'accounts:index' %}" class="btn btn-secondary">Back</a>
+    </div>
+  </form>
+</div>
 {% endblock %}
